--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     tools:context="com.cdi.practica.jefaturapoliciausuario.MainActivity">
 
     <EditText
-        android:id="@+id/dni"
+        android:id="@+id/email"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/password"
         android:layout_marginBottom="30dp"
-        android:hint=" DNI"/>
+        android:hint=" Email"/>
 
     <EditText
         android:id="@+id/password"
