--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,123 +6,197 @@
     android:layout_height="match_parent"
     tools:context="com.cdi.practica.jefaturapoliciausuario.SignUp">
 
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:hint="Nombre"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/lastname"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/name"
-        android:layout_marginTop="10dp"
-        android:hint="Apellidos"/>
-    <EditText
-        android:id="@+id/dni"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/lastname"
-        android:layout_marginTop="10dp"
-        android:hint="DNI"/>
-    <EditText
-        android:id="@+id/address"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/dni"
-        android:layout_marginTop="10dp"
-        android:hint="Dirección"/>
-    <EditText
-        android:id="@+id/phone"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/address"
-        android:layout_marginTop="10dp"
-        android:hint="Telefono"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/vehicles"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_alignLeft="@+id/phone"
-        android:layout_below="@+id/phone"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorPrimaryLight"
-        android:text="  Vehiculos"
-        android:gravity="center|left"
-        android:textSize="18dp"/>
-    <TextView
-        android:id="@+id/numVehicles"
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:layout_toRightOf="@+id/vehicles"
-        android:layout_below="@+id/phone"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorPrimaryLight"
-        android:text="0"
-        android:gravity="center"
-        android:textSize="18dp"/>
-    <TextView
-        android:id="@+id/addVehicle"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_toRightOf="@+id/numVehicles"
-        android:layout_below="@+id/phone"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorPrimarySemiLight"
-        android:text="+"
-        android:gravity="center"
-        android:textSize="20dp"/>
+            <TextView
+                android:id="@+id/textInfoPers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="10dp"
+                android:text="Información personal"/>
 
-    <TextView
-        android:id="@+id/properties"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_alignLeft="@+id/phone"
-        android:layout_below="@+id/vehicles"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimaryLight"
-        android:text="  Propiedades"
-        android:gravity="center|left"
-        android:textSize="18dp"/>
-    <TextView
-        android:id="@+id/numProperties"
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:layout_toRightOf="@+id/properties"
-        android:layout_below="@+id/vehicles"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimaryLight"
-        android:text="0"
-        android:gravity="center"
-        android:textSize="18dp"/>
-    <TextView
-        android:id="@+id/addPropertie"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_toRightOf="@+id/numProperties"
-        android:layout_below="@+id/vehicles"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimarySemiLight"
-        android:text="+"
-        android:gravity="center"
-        android:textSize="20dp"/>
+            <View
+                android:id="@+id/bar1"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="2dp"
+                android:layout_below="@+id/textInfoPers"
+                android:background="@android:color/black"/>
 
-    <Button
-        android:id="@+id/aceptSignUp"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:text="Aceptar"
-        android:backgroundTint="@color/colorPrimary"/>
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_below="@id/bar1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:hint="Nombre"/>
+
+            <EditText
+                android:id="@+id/lastname"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/name"
+                android:layout_marginTop="10dp"
+                android:hint="Apellidos"/>
+            <EditText
+                android:id="@+id/dni"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/lastname"
+                android:layout_marginTop="10dp"
+                android:hint="DNI"/>
+            <EditText
+                android:id="@+id/phone"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/dni"
+                android:layout_marginTop="10dp"
+                android:hint="Telefono"/>
+            <TextView
+                android:id="@+id/textInfoAcc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/phone"
+                android:paddingLeft="10dp"
+                android:text="Información de la cuenta"/>
+            <View
+                android:id="@+id/bar2"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="2dp"
+                android:layout_below="@+id/textInfoAcc"
+                android:background="@android:color/black"/>
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/bar2"
+                android:layout_marginTop="10dp"
+                android:hint="Email"/>
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/email"
+                android:layout_marginTop="10dp"
+                android:hint="Contraseña"/>
+            <EditText
+                android:id="@+id/password2"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/password"
+                android:layout_marginTop="10dp"
+                android:hint="Confirmar contraseña"/>
+            <TextView
+                android:id="@+id/textInfoExtra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/password2"
+                android:paddingLeft="10dp"
+                android:text="Vehiculos y propiedades"/>
+            <View
+                android:id="@+id/bar3"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="2dp"
+                android:layout_below="@+id/textInfoExtra"
+                android:background="@android:color/black"/>
+            <TextView
+                android:id="@+id/vehicles"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:layout_alignLeft="@+id/phone"
+                android:layout_below="@+id/bar3"
+                android:layout_marginTop="20dp"
+                android:background="@color/colorPrimaryLight"
+                android:text="  Vehiculos"
+                android:gravity="center|left"
+                android:textSize="18dp"/>
+            <TextView
+                android:id="@+id/numVehicles"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:layout_toRightOf="@+id/vehicles"
+                android:layout_below="@+id/bar3"
+                android:layout_marginTop="20dp"
+                android:background="@color/colorPrimaryLight"
+                android:text="0"
+                android:gravity="center"
+                android:textSize="18dp"/>
+            <TextView
+                android:id="@+id/addVehicle"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_toRightOf="@+id/numVehicles"
+                android:layout_below="@+id/bar3"
+                android:layout_marginTop="20dp"
+                android:background="@color/colorPrimarySemiLight"
+                android:text="+"
+                android:gravity="center"
+                android:textSize="20dp"/>
+
+            <TextView
+                android:id="@+id/properties"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:layout_alignLeft="@+id/phone"
+                android:layout_below="@+id/vehicles"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorPrimaryLight"
+                android:text="  Propiedades"
+                android:gravity="center|left"
+                android:textSize="18dp"/>
+            <TextView
+                android:id="@+id/numProperties"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:layout_toRightOf="@+id/properties"
+                android:layout_below="@+id/vehicles"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorPrimaryLight"
+                android:text="0"
+                android:gravity="center"
+                android:textSize="18dp"/>
+            <TextView
+                android:id="@+id/addPropertie"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_toRightOf="@+id/numProperties"
+                android:layout_below="@+id/vehicles"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorPrimarySemiLight"
+                android:text="+"
+                android:gravity="center"
+                android:textSize="20dp"/>
+
+            <Button
+                android:id="@+id/aceptSignUp"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/properties"
+                android:layout_marginTop="10dp"
+                android:text="Aceptar"
+                android:backgroundTint="@color/colorPrimary"/>
+
+        </RelativeLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
