Añadir propiedad a la BBDD

--- a/app/src/main/res/layout/activity_sign_up_propertie.xml
+++ b/app/src/main/res/layout/activity_sign_up_propertie.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.cdi.practica.jefaturapoliciausuario.SignUp_Propertie">
 
-</android.support.constraint.ConstraintLayout>
+    <Spinner
+        android:id="@+id/tipo"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/direccion"
+        android:layout_marginBottom="10dp"/>
+    <EditText
+        android:id="@+id/direccion"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_above="@+id/seguro"
+        android:hint="Dirección"/>
+
+    <Button
+        android:id="@+id/aceptSignUpPropertie"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:text="Aceptar"
+        android:backgroundTint="@color/colorPrimary"/>
+
+</RelativeLayout>
