--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -40,7 +40,7 @@
                 android:hint="Nombre"/>
 
             <EditText
-                android:id="@+id/lastname"
+                android:id="@+id/lastName"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
@@ -52,7 +52,7 @@
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@+id/lastname"
+                android:layout_below="@+id/lastName"
                 android:layout_marginTop="10dp"
                 android:hint="DNI"/>
             <EditText
@@ -101,7 +101,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/password"
                 android:layout_marginTop="10dp"
-                android:hint="Confirmar contraseña"/>
+                android:hint="Repetir contraseña"/>
             <TextView
                 android:id="@+id/textInfoExtra"
                 android:layout_width="wrap_content"
