--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context="com.cdi.practica.jefaturapoliciausuario.MainMenu">
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Predenuncia"
+        android:backgroundTint="@color/colorAccent"
+        android:textColor="@color/colorPrimaryText"
+        tools:layout_editor_absoluteX="133dp"
+        tools:layout_editor_absoluteY="103dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
+        android:text="Gestión"
+        android:textColor="@color/colorPrimaryText"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="209dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
+        android:text="Emergencia"
+        android:textColor="@color/colorPrimaryText"
+        tools:layout_editor_absoluteX="137dp"
+        tools:layout_editor_absoluteY="309dp" />
 </android.support.constraint.ConstraintLayout>
