--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_width="199dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:inputType="textPassword"
         android:ems="10"
         android:hint="Password" />
 
