--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -92,6 +92,7 @@
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/email"
+                android:inputType="textPassword"
                 android:layout_marginTop="10dp"
                 android:hint="Contraseña"/>
             <EditText
@@ -100,6 +101,7 @@
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/password"
+                android:inputType="textPassword"
                 android:layout_marginTop="10dp"
                 android:hint="Repetir contraseña"/>
             <TextView
