--- a/app/src/main/res/layout/activity_predenuncia.xml
+++ b/app/src/main/res/layout/activity_predenuncia.xml
@@ -6,50 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.cdi.practica.jefaturapoliciausuario.PredenunciaActivity">
 
-    <EditText
-        android:id="@+id/nombre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/ubicacion"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Nombre" />
-
-    <ImageButton
-        android:id="@+id/aceptarpredenuncia"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:background="@color/colorAccent"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/dni"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="75dp"
-        />
-
-    <EditText
-        android:id="@+id/dni"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/nombre"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="DNI" />
-
-    <EditText
-        android:id="@+id/ubicacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/fact"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Ubicación" />
-
     <TextView
         android:id="@+id/hechostexto"
         android:layout_width="wrap_content"
@@ -66,4 +22,60 @@
         android:layout_marginTop="10dp"
         android:layout_below="@+id/hechostexto"
         android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/ubicacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/fact"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Ubicación" />
+
+    <EditText
+        android:id="@+id/nombre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/ubicacion"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Nombre" />
+
+    <EditText
+        android:id="@+id/apellidos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/nombre"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Apellidos" />
+
+    <EditText
+        android:id="@+id/dni"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/apellidos"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="DNI" />
+
+
+    <ImageButton
+        android:id="@+id/aceptarpredenuncia"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:background="@color/colorAccent"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/dni"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="75dp"
+        />
 </RelativeLayout>
