--- a/app/src/main/res/layout/activity_predenuncia.xml
+++ b/app/src/main/res/layout/activity_predenuncia.xml
@@ -7,7 +7,7 @@
     tools:context="com.cdi.practica.jefaturapoliciausuario.PredenunciaActivity">
 
     <TextView
-        android:id="@+id/hechostexto"
+        android:id="@+id/tipoTexto"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
@@ -17,10 +17,10 @@
         android:text="Denuncia por" />
 
     <Spinner
-        android:id="@+id/fact"
+        android:id="@+id/tipo"
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/hechostexto"
+        android:layout_below="@+id/tipoTexto"
         android:layout_height="wrap_content" />
 
     <EditText
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:layout_below="@+id/fact"
+        android:layout_below="@+id/tipo"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:inputType="textPersonName"
@@ -69,7 +69,7 @@
 
 
     <ImageButton
-        android:id="@+id/aceptarpredenuncia"
+        android:id="@+id/aceptarPredenuncia"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:background="@color/colorAccent"
