--- a/app/src/main/res/layout/activity_registro_propiedad.xml
+++ b/app/src/main/res/layout/activity_registro_propiedad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cdi.practica.jefaturapoliciausuario.SignUp_Propertie">
+    tools:context="com.cdi.practica.jefaturapoliciausuario.Registro_Propiedad">
 
     <Spinner
         android:id="@+id/tipo"
@@ -23,7 +23,7 @@
         android:hint="Dirección"/>
 
     <Button
-        android:id="@+id/aceptSignUpPropertie"
+        android:id="@+id/aceptarPropiedad"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
