--- a/app/src/main/res/layout/activity_predenuncia.xml
+++ b/app/src/main/res/layout/activity_predenuncia.xml
@@ -34,6 +34,8 @@
         android:inputType="textPersonName"
         android:hint="Ubicación" />
 
+
+
     <EditText
         android:id="@+id/nombre"
         android:layout_width="wrap_content"
@@ -75,7 +77,17 @@
         android:background="@color/colorAccent"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/dni"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="75dp"
         />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:text="JEFATURA DE POLICIA"
+        tools:layout_editor_absoluteX="121dp"
+        tools:layout_editor_absoluteY="476dp" />
 </RelativeLayout>
