--- a/app/src/main/res/layout/dialog_emergencia.xml
+++ b/app/src/main/res/layout/dialog_emergencia.xml
@@ -28,47 +28,56 @@
         android:id="@+id/image"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
+        android:layout_alignLeft="@+id/bar1"
         tools:ignore="ContentDescription,RtlHardcoded" />
 
     <View
         android:id="@+id/bar1"
         android:layout_width="225dp"
         android:layout_height="1dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="6dp"
         android:layout_marginTop="2dp"
         android:layout_below="@+id/image"
         android:background="@android:color/black"/>
 
     <TextView
-        android:text="Manten pulsado 'Aceptar' varios segundos."
+        android:text="¿Desea enviar un aviso de emergencia?"
         android:layout_width="235dp"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:id="@+id/text2"
+        android:gravity="center"
         android:layout_marginTop="10dp"
         android:padding="5dp"
         android:textStyle="italic"
-        android:textSize="15sp"
+        android:textSize="17sp"
         android:layout_below="@+id/text" />
 
-    <Button
-        android:id="@+id/dialogButtonOK"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:text="Aceptar"
+    <com.ncorti.slidetoact.SlideToActView
+        android:id="@+id/aceptarEmergencia"
+        android:layout_width="230dp"
+        android:layout_height="64dp"
+        app:slider_height="65dp"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/text2"
-        android:textSize="15sp"
-        android:backgroundTint="@color/colorSOS"
-        tools:ignore="RtlHardcoded,RtlSymmetry" />
+        android:layout_centerHorizontal="true"
+        android:elevation="4dp"
+        app:outer_color="@color/colorSOS"
+        app:text_size="18sp"
+        app:text="Aceptar" />
+
+
     <Button
         android:id="@+id/dialogButtonCancel"
         android:layout_width="120dp"
         android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
         android:text="Cancelar"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/text2"
-        android:layout_toRightOf="@+id/dialogButtonOK"
+        android:layout_below="@+id/aceptarEmergencia"
         android:textSize="15sp"
+        android:textColor="@color/colorTextIcons"
         android:backgroundTint="@color/colorSecondaryText"
         tools:ignore="RtlHardcoded,RtlSymmetry" />
 
