--- a/app/src/main/res/layout/gestion_ajenas.xml
+++ b/app/src/main/res/layout/gestion_ajenas.xml
@@ -10,7 +10,48 @@
     <TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Recibidas"/>
+        android:layout_height="wrap_content"/>
+
+    <com.ramotion.foldingcell.FoldingCell
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/folding_cell"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        ​
+        <FrameLayout
+            android:id="@+id/cell_content_view"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:background="@android:color/darker_gray"
+            android:visibility="gone">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="250dp" />
+            <Button
+                android:id="@+id/addDoc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Alegar"
+                android:layout_gravity="bottom"
+                android:backgroundTint="@color/colorSecondaryText"
+                android:textColor="@color/colorPrimaryText"/>
+
+        </FrameLayout>
+        ​
+        <FrameLayout
+            android:id="@+id/cell_title_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:background="@android:color/holo_blue_dark" />
+        </FrameLayout>
+        ​
+    </com.ramotion.foldingcell.FoldingCell>
 
 </RelativeLayout>
