--- a/app/src/main/res/layout/activity_predenuncia.xml
+++ b/app/src/main/res/layout/activity_predenuncia.xml
@@ -70,7 +70,7 @@
         android:hint="DNI" />
 
 
-    <ImageButton
+    <Button
         android:id="@+id/aceptarPredenuncia"
         android:layout_width="100dp"
         android:layout_height="50dp"
@@ -78,16 +78,9 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/dni"
         android:layout_marginTop="30dp"
+        android:text="aceptar"
         android:layout_marginBottom="75dp"
         />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:text="JEFATURA DE POLICIA"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="476dp" />
+
 </RelativeLayout>
