--- a/app/src/main/res/layout/activity_emergencia.xml
+++ b/app/src/main/res/layout/activity_emergencia.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cdi.practica.jefaturapoliciausuario.Emergencia">
+    tools:context="com.cdi.practica.jefaturapoliciausuario.EmergenciaActivity">
 
     <TextView
         android:id="@+id/titulo"
